@@ -7,16 +7,16 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	7.153 (gritter) 10/28/06";
+	"@(#)/usr/ucb/otfdump.sl	7.154 (gritter) 10/29/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  7.153 (gritter) 10/28/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 7.153 (gritter) 10/28/06";
+static const char sccsid[] USED = "@(#)dpost.sl  7.154 (gritter) 10/29/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 7.154 (gritter) 10/29/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.153 (gritter) 10/28/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.154 (gritter) 10/29/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.153 (gritter) 10/28/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.154 (gritter) 10/29/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "7.153";
+const char revision[] = "7.154";
 /* SLIST */
 /*
 ext.h: * Sccsid @(#)ext.h	1.96 (gritter) 10/21/06
@@ -26,7 +26,7 @@ n2.c: * Sccsid @(#)n2.c	1.35 (gritter) 10/22/06
 n3.c: * Sccsid @(#)n3.c	1.170 (gritter) 10/28/06
 n4.c: * Sccsid @(#)n4.c	1.84 (gritter) 10/21/06
 n5.c: * Sccsid @(#)n5.c	1.109 (gritter) 10/27/06
-n7.c: * Sccsid @(#)n7.c	1.136 (gritter) 10/28/06
+n7.c: * Sccsid @(#)n7.c	1.137 (gritter) 10/29/06
 n8.c: * Sccsid @(#)n8.c	1.36 (gritter) 10/28/06
 n9.c: * Sccsid @(#)n9.c	1.65 (gritter) 10/15/06
 ni.c: * Sccsid @(#)ni.c	1.42 (gritter) 10/21/06
